add dismiss delegate
add dismiss delegate

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@ tmp/*
 plan
 
 
+
+KxMenuExample/KxMenuExample-Info.plist
+
+KxMenuExample.xcodeproj/project.pbxproj
+
+KxMenuExample/KxMenuExample-Info.plist
